<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredients_list"
        android:textColor="@color/colorPrimaryDark"
        android:textAllCaps="true"
        android:textSize="@dimen/step_size"
        android:textStyle="bold"
        android:padding="@dimen/card_view_margin"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ingredients_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/steps"
        android:textColor="@color/colorPrimaryDark"
        android:textAllCaps="true"
        android:textSize="@dimen/step_size"
        android:textStyle="bold"
        android:padding="@dimen/card_view_margin"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/steps_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5" />
</LinearLayout>
