<resources>
    <string name="app_name">Baking App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_steps">StepsActivity</string>
    <string name="title_activity_steps_detail">StepsDetailActivity</string>

    <string name="recipie_name">Name</string>
    <string name="ingredient">Ingredients</string>
    <string name="quantity">Quantity: </string>
    <string name="_50">50</string>
    <string name="g">G</string>
    <string name="title_activity_steps_details">StepsDetailsActivity</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="no_network">No Network connection.</string>
    <string name="appwidget_text">Recipe Shopping List</string>
    <string name="extra_recipe">recipe_extra</string>
    <string name="add_widget">Add widget</string>
    <string name="ingredients_list">Ingredients list:</string>
    <string name="steps">Steps</string>
    <string name="hello">Hello</string>
    <string name="servings">Servings:</string>

    <string name="title_for_empty_view">Oops!</string>
    <string name="text_for_empty_view">Possible internet connection is missing</string>
</resources>
